# loris-cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README
.github/workflows/: cmake-multi-platform.yml
